Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
See example failure
FAILED: src/arrow/python/CMakeFiles/arrow_python_objlib.dir/extension_type.cc.o /opt/conda/bin/x86_64-conda_cos6-linux-gnu-c++ -DARROW_EXTRA_ERROR_CONTEXT -DARROW_JEMALLOC -DARROW_JEMALLOC_INCLUDE_DIR="" -DARROW_PYTHON_EXPORTING -DARROW_USE_GLOG -DARROW_USE_SIMD -DARROW_WITH_BROTLI -DARROW_WITH_LZ4 -DARROW_WITH_SNAPPY -DARROW_WITH_ZLIB -DARROW_WITH_ZSTD -Isrc -I../src -isystem /opt/conda/include -isystem jemalloc_ep-prefix/src -isystem ../thirdparty/hadoop/include -isystem /opt/conda/lib/python2.7/site-packages/numpy/core/include -isystem /opt/conda/include/python2.7 -Wno-noexcept-type -fvisibility-inlines-hidden -std=c++17 -fmessage-length=0 -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -fdiagnostics-color=always -ggdb -O0 -Wall -Wno-conversion -Wno-sign-conversion -Wno-unused-variable -Werror -msse4.2 -g -fPIC -std=gnu++11 -MD -MT src/arrow/python/CMakeFiles/arrow_python_objlib.dir/extension_type.cc.o -MF src/arrow/python/CMakeFiles/arrow_python_objlib.dir/extension_type.cc.o.d -o src/arrow/python/CMakeFiles/arrow_python_objlib.dir/extension_type.cc.o -c ../src/arrow/python/extension_type.cc ../src/arrow/python/extension_type.cc: In function 'arrow::Status arrow::py::{anonymous}::SerializeExtInstance(PyObject*, std::__cxx11::string*)': ../src/arrow/python/extension_type.cc:36:85: error: ISO C++ forbids converting a string constant to 'char*' [-Werror=write-strings] OwnedRef res(PyObject_CallMethod(type_instance, "__arrow_ext_serialize__", nullptr)); ^ ../src/arrow/python/extension_type.cc: In function 'PyObject* arrow::py::{anonymous}::DeserializeExtInstance(PyObject*, std::shared_ptr<arrow::DataType>, const string&)': ../src/arrow/python/extension_type.cc:65:63: error: ISO C++ forbids converting a string constant to 'char*' [-Werror=write-strings] storage_ref.obj(), data_ref.obj()); ^ ../src/arrow/python/extension_type.cc:65:63: error: ISO C++ forbids converting a string constant to 'char*' [-Werror=write-strings] cc1plus: all warnings being treated as errors
Attachments
Issue Links
- links to