ARROW-5616: [C++][Python] Fix -Wwrite-strings warning when building against Python 2.7 headers

`PyObject_CallMethod` uses `const char*` for its arguments while Python 2.7 it's `char*` so this warning only occurs there

Author: Wes McKinney <wesm+git@apache.org>

Closes #4581 from wesm/ARROW-5616 and squashes the following commits:

5b8035cf7 <Wes McKinney> List comprehension leaves a dangling reference in Python 2
78733618f <Wes McKinney> Fix another API callsite
19a78d0a7 <Wes McKinney> Python 2.7 builds have -Wwrite-strings