cpp/src/arrow/python/extension_type.cc
@@ -33,7 +33,8 @@ namespace {
 
 // Serialize a Python ExtensionType instance
 Status SerializeExtInstance(PyObject* type_instance, std::string* out) {
-  OwnedRef res(PyObject_CallMethod(type_instance, "__arrow_ext_serialize__", nullptr));
+  OwnedRef res(
+      cpp_PyObject_CallMethod(type_instance, "__arrow_ext_serialize__", nullptr));
   if (!res) {
     return ConvertPyError();
   }
@@ -61,8 +62,8 @@ PyObject* DeserializeExtInstance(PyObject* type_class,
     return nullptr;
   }
 
-  return PyObject_CallMethod(type_class, "__arrow_ext_deserialize__", "OO",
-                             storage_ref.obj(), data_ref.obj());
+  return cpp_PyObject_CallMethod(type_class, "__arrow_ext_deserialize__", "OO",
+                                 storage_ref.obj(), data_ref.obj());
 }
 
 }  // namespace
